Save inferences to hopsworks,

--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -24,9 +24,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-29 11:49:17,568 INFO: Initializing external client\n",
-      "2025-12-29 11:49:17,569 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
-      "2025-12-29 11:49:19,341 INFO: Python Engine initialized.\n",
+      "2025-12-30 20:41:05,793 INFO: Initializing external client\n",
+      "2025-12-30 20:41:05,794 INFO: Base URL: https://c.app.hopsworks.ai:443\n",
+      "2025-12-30 20:41:07,492 INFO: Python Engine initialized.\n",
       "\n",
       "Logged in to project, explore it here https://c.app.hopsworks.ai:443/p/1267871\n",
       "Successfully connected to Feature Store: a1id2223_featurestore\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "c0745085",
    "metadata": {},
    "outputs": [],
@@ -72,8 +72,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.83s) \n",
-      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (1.38s) \n"
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.87s) \n",
+      "Finished: Reading data from Hopsworks, using Hopsworks Feature Query Service (0.84s) \n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-12-29 00:00:00+0000', tz='Etc/UTC')"
+       "Timestamp('2025-12-30 00:00:00+0000', tz='Etc/UTC')"
       ]
      },
      "execution_count": 5,
@@ -112,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-12-26 00:00:00+0000', tz='Etc/UTC')"
+       "Timestamp('2025-12-30 00:00:00+0000', tz='Etc/UTC')"
       ]
      },
      "execution_count": 6,
@@ -145,7 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "After filtering: 1134 dates with both sentiment and opening prices\n"
+      "After filtering: 1135 dates with both sentiment and opening prices\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
     {
      "data": {
       "text/plain": [
-       "Timestamp('2025-12-23 00:00:00+0000', tz='Etc/UTC')"
+       "Timestamp('2025-12-30 00:00:00+0000', tz='Etc/UTC')"
       ]
      },
      "execution_count": 9,
@@ -195,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Date range: 2016-02-19 00:00:00+00:00 to 2025-12-23 00:00:00+00:00\n",
+      "Date range: 2016-02-19 00:00:00+00:00 to 2025-12-30 00:00:00+00:00\n",
       "\n",
       "First few rows:\n",
       "                         date  sentiment_polarity  sentiment_neg  \\\n",
@@ -214,18 +214,18 @@
       "\n",
       "Last few rows:\n",
       "                          date  sentiment_polarity  sentiment_neg  \\\n",
-      "336  2024-11-22 00:00:00+00:00            0.318500       0.000000   \n",
       "1118 2024-11-25 00:00:00+00:00            0.000000       0.000000   \n",
       "407  2024-11-26 00:00:00+00:00            0.000000       0.000000   \n",
       "1088 2024-11-27 00:00:00+00:00            0.000000       0.000000   \n",
       "0    2025-12-23 00:00:00+00:00            0.298535       0.131626   \n",
+      "1134 2025-12-30 00:00:00+00:00            0.118052       0.183541   \n",
       "\n",
       "      sentiment_neu  sentiment_pos        open  target_open  \n",
-      "336        0.870500        0.12950  227.033189   230.417878  \n",
-      "1118       1.000000        0.00000  230.417878   232.279472  \n",
-      "407        1.000000        0.00000  232.279472   233.414318  \n",
-      "1088       1.000000        0.00000  233.414318   233.752786  \n",
-      "0          0.438214        0.43016  270.839996   272.339996  \n"
+      "1118       1.000000       0.000000  230.417878   232.279472  \n",
+      "407        1.000000       0.000000  232.279472   233.414318  \n",
+      "1088       1.000000       0.000000  233.414318   233.752786  \n",
+      "0          0.438214       0.430160  270.839996   272.339996  \n",
+      "1134       0.514867       0.301592  272.834991          NaN  \n"
      ]
     }
    ],
@@ -251,7 +251,7 @@
      "text": [
       "Filtered data: 1134 rows with valid target_open\n",
       "\n",
-      "Null target_open count: 0\n"
+      "Null target_open count: 1\n"
      ]
     }
    ],
@@ -313,7 +313,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e0fa8962143495089e9437bb4c72599",
+       "model_id": "912bb57b64f9433094d9037a4334339b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -328,7 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model downloaded to: /var/folders/2x/6wpkl49n4bsfkkvhr3gm3tt00000gn/T/2847da16-4aab-4e85-9276-856ceb4f5f40/sentiment_stock_price_model_AAPL/1\n"
+      "Model downloaded to: /var/folders/2x/6wpkl49n4bsfkkvhr3gm3tt00000gn/T/cc5a19cc-9375-44e3-bb01-db1de77e5561/sentiment_stock_price_model_AAPL/1\n"
      ]
     }
    ],
@@ -357,7 +357,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model loaded from /var/folders/2x/6wpkl49n4bsfkkvhr3gm3tt00000gn/T/2847da16-4aab-4e85-9276-856ceb4f5f40/sentiment_stock_price_model_AAPL/1/model.json\n"
+      "Model loaded from /var/folders/2x/6wpkl49n4bsfkkvhr3gm3tt00000gn/T/cc5a19cc-9375-44e3-bb01-db1de77e5561/sentiment_stock_price_model_AAPL/1/model.json\n"
      ]
     }
    ],
@@ -438,17 +438,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-29 11:50:15,199 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "2025-12-30 20:41:15,946 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "\n",
-      "2025-12-29 11:50:15,199 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "2025-12-30 20:41:15,946 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "\n",
-      "2025-12-29 11:50:15,200 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "2025-12-30 20:41:15,948 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "\n",
-      "2025-12-29 11:50:15,200 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "2025-12-30 20:41:15,948 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "\n",
-      "2025-12-29 11:50:15,201 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "2025-12-30 20:41:15,949 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "\n",
-      "2025-12-29 11:50:15,201 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
+      "2025-12-30 20:41:15,949 WARNING: DeprecationWarning: is_sparse is deprecated and will be removed in a future version. Check `isinstance(dtype, pd.SparseDtype)` instead.\n",
       "\n",
       "==================================================\n",
       "INFERENCE PERFORMANCE METRICS\n",
@@ -499,7 +499,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-29 11:50:18,696 WARNING: DeprecationWarning: backend2gui is deprecated since IPython 8.24, backends are managed in matplotlib and can be externally registered.\n",
+      "2025-12-30 20:41:15,975 WARNING: DeprecationWarning: backend2gui is deprecated since IPython 8.24, backends are managed in matplotlib and can be externally registered.\n",
       "\n"
      ]
     },
@@ -650,7 +650,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No recent unvalidated dates found. All data has known target_open values.\n"
+      "Found 1 recent dates without validation data (target_open is null)\n",
+      "These are dates: [Timestamp('2025-12-30 00:00:00+0000', tz='Etc/UTC')]\n",
+      "\n",
+      "============================================================\n",
+      "PREDICTIONS FOR RECENT DATES (Not Yet Validated)\n",
+      "============================================================\n",
+      "                     date  current_open  predicted_next_day_open\n",
+      "2025-12-30 00:00:00+00:00    272.834991               190.918732\n",
+      "============================================================\n",
+      "\n",
+      "Note: These predictions are for the next trading day's opening price.\n",
+      "They cannot be validated yet because that trading day hasn't occurred.\n"
      ]
     }
    ],
@@ -698,7 +709,13 @@
       "\n",
       "Complete Prediction Timeline:\n",
       "Validated predictions (with actual outcomes): 1134 dates\n",
-      "  Date range: 2016-02-19 00:00:00+00:00 to 2025-12-23 00:00:00+00:00\n"
+      "  Date range: 2016-02-19 00:00:00+00:00 to 2025-12-23 00:00:00+00:00\n",
+      "\n",
+      "Unvalidated predictions (future): 1 dates\n",
+      "  Date range: 2025-12-30 00:00:00+00:00 to 2025-12-30 00:00:00+00:00\n",
+      "\n",
+      "  Latest prediction: On 2025-12-30, \n",
+      "  predict next trading day open = $190.92\n"
      ]
     }
    ],
@@ -713,6 +730,106 @@
     "    print(f\"  Date range: {recent_results['date'].min()} to {recent_results['date'].max()}\")\n",
     "    print(f\"\\n  Latest prediction: On {recent_results['date'].max().date()}, \")\n",
     "    print(f\"  predict next trading day open = ${recent_results['predicted_next_day_open'].iloc[-1]:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00ae6bb2",
+   "metadata": {},
+   "source": [
+    "## Store Predictions\n",
+    "Save the predictions to a new Feature Group `opening_price_preds` for use in dashboards or external applications."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "99f2c9be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preparing to store 1135 predictions...\n",
+      "                          date  current_open  predicted_open\n",
+      "1130 2024-11-25 00:00:00+00:00    230.417878      194.387192\n",
+      "1131 2024-11-26 00:00:00+00:00    232.279472      194.387192\n",
+      "1132 2024-11-27 00:00:00+00:00    233.414318      194.387192\n",
+      "1133 2025-12-23 00:00:00+00:00    270.839996      190.853241\n",
+      "1134 2025-12-30 00:00:00+00:00    272.834991      190.918732\n",
+      "Feature Group created successfully, explore it at \n",
+      "https://c.app.hopsworks.ai:443/p/1267871/fs/1262659/fg/1876504\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Uploading Dataframe: 100.00% |██████████| Rows 1135/1135 | Elapsed Time: 00:00 | Remaining Time: 00:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching job: opening_price_preds_1_offline_fg_materialization\n",
+      "Job started successfully, you can follow the progress at \n",
+      "https://c.app.hopsworks.ai:443/p/1267871/jobs/named/opening_price_preds_1_offline_fg_materialization/executions\n",
+      "2025-12-30 20:41:33,785 INFO: Waiting for execution to finish. Current state: SUBMITTED. Final status: UNDEFINED\n",
+      "2025-12-30 20:41:40,150 INFO: Waiting for execution to finish. Current state: RUNNING. Final status: UNDEFINED\n",
+      "2025-12-30 20:43:47,353 INFO: Waiting for execution to finish. Current state: SUCCEEDING. Final status: UNDEFINED\n",
+      "2025-12-30 20:43:53,756 INFO: Waiting for execution to finish. Current state: AGGREGATING_LOGS. Final status: SUCCEEDED\n",
+      "2025-12-30 20:43:53,937 INFO: Waiting for log aggregation to finish.\n",
+      "2025-12-30 20:44:09,346 INFO: Execution finished successfully.\n",
+      "Successfully inserted predictions into 'opening_price_preds' feature group\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ---------------------------------------------------------\n",
+    "# Store Predictions in Feature Store\n",
+    "# ---------------------------------------------------------\n",
+    "\n",
+    "# Initialize an empty DataFrame for all predictions\n",
+    "all_preds = pd.DataFrame()\n",
+    "\n",
+    "# 1. Add validated predictions (from 'results' dataframe)\n",
+    "# 'results' has columns: date, open, target_open, predicted_open\n",
+    "if 'results' in locals() and not results.empty:\n",
+    "    validated_preds = results[['date', 'open', 'predicted_open']].copy()\n",
+    "    validated_preds = validated_preds.rename(columns={'open': 'current_open'})\n",
+    "    all_preds = pd.concat([all_preds, validated_preds])\n",
+    "\n",
+    "# 2. Add recent unvalidated predictions (from 'recent_results' dataframe)\n",
+    "# 'recent_results' has columns: date, current_open, predicted_next_day_open\n",
+    "if 'recent_results' in locals() and not recent_results.empty:\n",
+    "    recent_preds = recent_results[['date', 'current_open', 'predicted_next_day_open']].copy()\n",
+    "    recent_preds = recent_preds.rename(columns={'predicted_next_day_open': 'predicted_open'})\n",
+    "    all_preds = pd.concat([all_preds, recent_preds])\n",
+    "\n",
+    "# 3. Insert into Feature Store\n",
+    "if not all_preds.empty:\n",
+    "    # Sort by date\n",
+    "    all_preds = all_preds.sort_values('date').reset_index(drop=True)\n",
+    "    \n",
+    "    print(f\"Preparing to store {len(all_preds)} predictions...\")\n",
+    "    print(all_preds.tail())\n",
+    "\n",
+    "    # Get or create the feature group\n",
+    "    preds_fg = fs.get_or_create_feature_group(\n",
+    "        name=\"opening_price_preds\",\n",
+    "        version=1,\n",
+    "        description=\"Predictions for AAPL opening prices (Next Day Open)\",\n",
+    "        primary_key=[\"date\"],\n",
+    "        event_time=\"date\"\n",
+    "    )\n",
+    "    \n",
+    "    # Insert data\n",
+    "    preds_fg.insert(all_preds, wait=True)\n",
+    "    print(\"Successfully inserted predictions into 'opening_price_preds' feature group\")\n",
+    "else:\n",
+    "    print(\"No predictions found to store.\")"
    ]
   }
  ],
