--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "id": "0c477a7b",
    "metadata": {},
    "outputs": [
@@ -875,10 +875,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2025-12-30 21:03:08,799 WARNING: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "2025-12-30 21:12:54,885 WARNING: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "\n",
       "Successfully exported 1135 records to ../docs/predictions.json\n",
-      "You can now push the 'docs' folder to GitHub to update your dashboard.\n"
+      "Updated JSON structure to include 'current_open' (today's price) and 'future_open' (target).\n"
      ]
     }
    ],
@@ -890,24 +890,30 @@
     "\n",
     "# 1. Prepare Validated Data (Past)\n",
     "# Merge results with sentiment from inference_data\n",
+    "# results columns: date, opening_prices_open (renamed to 'open' then 'current_open' in previous cells), target_open, predicted_open\n",
+    "# Let's re-fetch from 'results' dataframe which should have 'date', 'open', 'target_open', 'predicted_open'\n",
+    "# Note: In cell 26, 'results' was created with: results = inference_data[['date', 'opening_prices_open', 'target_open']].copy()\n",
+    "# and then renamed 'opening_prices_open' -> 'open'.\n",
+    "\n",
     "web_data_past = results.merge(inference_data[['date', 'sentiment_polarity']], on='date', how='left')\n",
     "web_data_past = web_data_past.rename(columns={\n",
-    "    'target_open': 'actual_open',\n",
+    "    'open': 'current_open',       # Price on 'date'\n",
+    "    'target_open': 'future_open', # Price on 'date'+1 (Target)\n",
     "    'sentiment_polarity': 'sentiment'\n",
     "})\n",
-    "web_data_past = web_data_past[['date', 'actual_open', 'predicted_open', 'sentiment']]\n",
+    "web_data_past = web_data_past[['date', 'current_open', 'future_open', 'predicted_open', 'sentiment']]\n",
     "\n",
     "# 2. Prepare Recent Data (Future/Unvalidated)\n",
-    "# Merge recent_results with sentiment from unvalidated_data\n",
     "if 'recent_results' in locals() and not recent_results.empty:\n",
+    "    # recent_results columns: date, current_open, predicted_next_day_open\n",
     "    web_data_future = recent_results.merge(unvalidated_data[['date', 'sentiment_polarity']], on='date', how='left')\n",
     "    web_data_future = web_data_future.rename(columns={\n",
     "        'predicted_next_day_open': 'predicted_open',\n",
     "        'sentiment_polarity': 'sentiment'\n",
     "    })\n",
-    "    # For future data, actual_open is null (or we can use current_open as a proxy for visualization if needed, but null is better for \"unknown\")\n",
-    "    web_data_future['actual_open'] = None \n",
-    "    web_data_future = web_data_future[['date', 'actual_open', 'predicted_open', 'sentiment']]\n",
+    "    web_data_future['future_open'] = None # We don't know the future yet\n",
+    "    \n",
+    "    web_data_future = web_data_future[['date', 'current_open', 'future_open', 'predicted_open', 'sentiment']]\n",
     "    \n",
     "    # Combine\n",
     "    web_df = pd.concat([web_data_past, web_data_future])\n",
@@ -918,19 +924,17 @@
     "web_df['date'] = web_df['date'].dt.strftime('%Y-%m-%d')\n",
     "web_df = web_df.sort_values('date')\n",
     "\n",
-    "# 4. Save to JSON in docs folder\n",
+    "# 4. Save to JSON\n",
     "output_path = '../docs/predictions.json'\n",
-    "# Create docs directory if it doesn't exist (from python, just in case)\n",
     "os.makedirs('../docs', exist_ok=True)\n",
     "\n",
-    "# Convert to list of dicts\n",
     "json_data = web_df.to_dict(orient='records')\n",
     "\n",
     "with open(output_path, 'w') as f:\n",
     "    json.dump(json_data, f, indent=2)\n",
     "\n",
     "print(f\"Successfully exported {len(json_data)} records to {output_path}\")\n",
-    "print(\"You can now push the 'docs' folder to GitHub to update your dashboard.\")"
+    "print(\"Updated JSON structure to include 'current_open' (today's price) and 'future_open' (target).\")"
    ]
   }
  ],
