Add UI filters and fix NaN handling

--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "0c477a7b",
    "metadata": {},
    "outputs": [
@@ -887,6 +887,7 @@
     "# Export Data for GitHub Pages Dashboard\n",
     "# ---------------------------------------------------------\n",
     "import json\n",
+    "import numpy as np\n",
     "\n",
     "# 1. Prepare Validated Data (Past)\n",
     "# Merge results with sentiment from inference_data\n",
@@ -927,6 +928,9 @@
     "# 4. Save to JSON\n",
     "output_path = '../docs/predictions.json'\n",
     "os.makedirs('../docs', exist_ok=True)\n",
+    "\n",
+    "# Replace NaN with None (which becomes null in JSON)\n",
+    "web_df = web_df.where(pd.notnull(web_df), None)\n",
     "\n",
     "json_data = web_df.to_dict(orient='records')\n",
     "\n",
